One major step forward